--- a/Views/Home/AddMovie.cshtml
+++ b/Views/Home/AddMovie.cshtml
@@ -6,65 +6,68 @@
 <h1>@ViewData["Title"]</h1>
 
 <h3>Use the form below to add a movie to the collection</h3>
+<div>
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="Category">Category:</label>
+            <select asp-for="Category">
+                <option value="Action/Adventure">Action/Adventure</option>
+                <option value="Comedy">Comedy</option>
+                <option value="Drama">Drama</option>
+                <option value="Family">Family</option>
+                <option value="Horror/Suspense">Horror/Suspense</option>
+                <option value="Miscellaneous">Miscellaneous</option>
+                <option value="Television">Television</option>
+                <option value="VHS">VHS</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label asp-for="Title">Title:</label>
+            <input asp-for="Title" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Year">Year:</label>
+            <input asp-for="Year" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Director">Director:</label>
+            <input asp-for="Director" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Rating">Rating:</label>
+            <select asp-for="Rating">
+                <option value="G">G</option>
+                <option value="PG">PG</option>
+                <option value="PG-13">PG-13</option>
+                <option value="R">R</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label asp-for="Edited">Edited:</label>
+            <select asp-for="Edited">
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label asp-for="LentTo">Lent To:</label>
+            <input asp-for="LentTo" />
+        </div>
 
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Category">Category:</label>
-        <select asp-for="Category">
-            <option value="Action/Adventure">Action/Adventure</option>
-            <option value="Comedy">Comedy</option>
-            <option value="Drama">Drama</option>
-            <option value="Family">Family</option>
-            <option value="Horror/Suspense">Horror/Suspense</option>
-            <option value="Miscellaneous">Miscellaneous</option>
-            <option value="Television">Television</option>
-            <option value="VHS">VHS</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label asp-for="Title">Title:</label>
-        <input asp-for="Title" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Year">Year:</label>
-        <input asp-for="Year" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Director">Director:</label>
-        <input asp-for="Director" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Rating">Rating:</label>
-        <select asp-for="Rating">
-            <option value="G">G</option>
-            <option value="PG">PG</option>
-            <option value="PG-13">PG-13</option>
-            <option value="R">R</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label asp-for="Edited">Edited:</label>
-        <select asp-for="Edited">
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label asp-for="LentTo">Lent To:</label>
-        <input asp-for="LentTo" />
-    </div>
+        <div class="form-group">
+            <label asp-for="Notes">Notes:</label>
+            <input asp-for="Notes" />
+        </div>
 
-    <div class="form-group">
-        <label asp-for="Notes">Notes:</label>
-        <input asp-for="Notes" />
-    </div>
+        <br />
+        <br />
 
-    <br />
-    <br />
+        <div class="form-group">
+            <input id="AddMovie" type="submit" class="btn-success float-left" value="Add Movie" />
+        </div>
 
-    <div class="form-group">
-        <input id="AddMovie" type="submit" class="btn-success float-left" value="Add Movie" />
-    </div>
+    </form>
+</div>
 
-</form>
-<div asp-validation-summary="All"></div>
+<br />
+<div class="validation" asp-validation-summary="All"></div>
