--- a/Views/Home/AddMovie.cshtml
+++ b/Views/Home/AddMovie.cshtml
@@ -8,17 +8,15 @@
 <h3>Use the form below to add a movie to the collection</h3>
 <div>
     <form method="post">
+        <input type="hidden" asp-for="ApplicationId" />
         <div class="form-group">
-            <label asp-for="Category">Category:</label>
-            <select asp-for="Category">
-                <option value="Action/Adventure">Action/Adventure</option>
-                <option value="Comedy">Comedy</option>
-                <option value="Drama">Drama</option>
-                <option value="Family">Family</option>
-                <option value="Horror/Suspense">Horror/Suspense</option>
-                <option value="Miscellaneous">Miscellaneous</option>
-                <option value="Television">Television</option>
-                <option value="VHS">VHS</option>
+            <label asp-for="CategoryID">Category:</label>
+            <select asp-for="CategoryID">
+                <option value="">Select a Category</option>
+                @foreach (Category c in ViewBag.Categories)
+                {
+                    <option value="@c.CategoryID">@c.CategoryName</option>
+                }
             </select>
         </div>
         <div class="form-group">
@@ -62,9 +60,8 @@
         <br />
         <br />
 
-        <div class="form-group">
-            <input id="AddMovie" type="submit" class="btn-success float-left" value="Add Movie" />
-        </div>
+        <button type="submit" class="btn-success">Submit</button>
+        
 
     </form>
 </div>
