--- a/Views/Home/ConfirmationPage.cshtml
+++ b/Views/Home/ConfirmationPage.cshtml
@@ -5,7 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">You successfully added @Model.Title to the collection</h1>
     <h4>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovie">Add another movie</a>
+        <a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="AddMovie">Add another movie</a>
+        <a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="MovieList">See your Movies</a>
     </h4>
 </div>
 
